processed/gerrit/txt_full/33148.txt
Change:     33148
Subject:    LU-10157 lnet: make LNET_MAX_IOV dependent on page size
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/33148
Change-Id:  Ie1dcdb195e68b44e2fa2d9b24715216d8aca4c65
Project:    fs/lustre-release
Branch:     b2_10
Status:     ABANDONED
Owner:      Minh Diep
Created:    2018-09-12 14:16:34.000000000
Updated:    2020-04-27 02:14:55.000000000
Patch Set:  1
Insertions: +8
Deletions:  -42
Comments:   0 (0 unresolved)

--- Reviewers ---
  REVIEWER: Jenkins, Cory Spitz, Wang Shilong, Ruth Klundt

--- Commit Message ---
LU-10157 lnet: make LNET_MAX_IOV dependent on page size

The default behavior of LNet is to always use 256 pages which is
LNET_MAX_IOV and that LNET_MAX_PAYLOAD is always one megabyte.
This assumes pages are always 4K in size which is not the case.
This cause bulk I/O errors when using platforms like PowerPC or
ARM which tend to use 64K pages. This is resolved by first making
LNET_MAX_PAYLOAD always one megabyte since this is what the
configuring sets it too by default and no one ever changes it.
In theory it could set it to as high as 16MB but that will cause
the I/O errors since the ptlrpc layer expects the packets to be
always 1 megabyte in size. Also it would be better to make the
maximum payload a per network setup configurations instead of for
everything. Second we make LNET_MAX_IOV equal to LNET_MAX_PAYLOAD
divided by the PAGE_SIZE. This way packets will always be the
LNET_MAX_PAYLOAD in size but the number of pages used,
LNET_MAX_IOV will vary depending on the platform it is creating
packets on.

Lustre-change: https://review.whamcloud.com/31559
Lustre-commit: 272e49ce2d5d6883e6ca1b00a9322b3a23b2e55a

Change-Id: Ie1dcdb195e68b44e2fa2d9b24715216d8aca4c65
Signed-off-by: James Simmons <uja.ornl@yahoo.com>
Reviewed-by: Wang Shilong <wshilong@ddn.com>
Reviewed-by: Ruth Klundt <rklundt@sandia.gov>
Signed-off-by: Minh Diep <mdiep@whamcloud.com>

--- Review History ---

--- Message (Minh Diep, 2018-09-12 14:16:34.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2018-09-12 14:17:21.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2018-09-12 14:24:13.000000000) ---
Patch Set 1:

Cannot build patch due to 14, messages:

  In file included from /home/green/smt/git/lustre-release/lustre/include/lustre_net.h:59:0,
                  from /home/green/smt/git/lustre-release/lustre/include/lustre_lib.h:56,
                  from /home/green/smt/git/lustre-release/lustre/include/obd.h:39,
                  from /home/green/smt/git/lustre-release/lustre/fid/fid_request.c:43:
 /home/green/smt/git/lustre-release/lnet/include/lnet/lib-types.h:314:44: error: field ‘net_tunables’ has incomplete type
   struct lnet_ioctl_config_lnd_cmn_tunables net_tunables;
                                             ^
 /home/green/smt/git/lustre-release/lnet/include/lnet/lib-types.h:381:27: error: field ‘ni_lnd_tunables’ has incomplete type
   struct lnet_lnd_tunables ni_lnd_tunables;
                            ^

--- Message (Jenkins, 2018-09-12 14:34:54.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/610/ : FAILURE

https://build.whamcloud.com/job/lustre-reviews/58573/ : FAILURE

--- Message (James Simmons, 2018-09-12 16:41:58.000000000) ---
Patch Set 1:

While this adds 64K page support without the rework of map_on_demand I don't know if ARM can function right.

--- Message (Cory Spitz, 2020-02-21 23:00:28.000000000) ---
Patch Set 1:

It is probably time to abandon this b2_10 patch.

--- Message (Andreas Dilger, 2020-04-27 02:14:55.000000000) ---
Abandoned

This patch has shown problems upstream.
